--- a/contest/contest.cbp
+++ b/contest/contest.cbp
@@ -33,6 +33,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="output.txt" />
 		<Extensions>
 			<code_completion />
 			<envvars />
